--- a/frontend/src/components/GridNewsCard/GridNewsCard.css
+++ b/frontend/src/components/GridNewsCard/GridNewsCard.css
@@ -4,3 +4,22 @@
     grid-gap: 20px;
     justify-items: center;
 }
+
+.tlitleList{
+    text-align: center;
+}
+
+.coolButon {
+    appearance: none;
+    background: black;
+    border: 0;
+    color: #fff;
+    cursor: pointer;
+    font: inherit;
+    font-weight: 500;
+    line-height: 1;
+    padding: 1em 1.5em;
+    position: relative;
+    transition: filter var(--motion-duration);
+}
+
